src/components/ScanBarcodeView.css
.scan-barcode-modal-overlay {
    background-color: transparent;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.scan-barcode-modal {
    box-shadow: 0px 0px 40px 2px rgba(0, 0, 0, 0.4);
    width: 500px;
    max-width: 90vw;
    margin-top: -35vh;
    border-radius: 10.5px;
    border: 2px solid lightgray;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    position: absolute;
}

.scan-barcode-form {
    --form-height: 48px;
    --barcode-icon-container-width: 40px;
    --cancel-button-width: 30px;

    display: flex;
    height: var(--form-height);
}

.scan-barcode-icon-container {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #f8f9fa;
    width: var(--barcode-icon-container-width);
    padding: .375rem .75rem;
    border-top-left-radius: 8px;
    border-bottom-left-radius: 8px;
}

.scan-barcode-cancel-button {
    width: var(--cancel-button-width);
    height: var(--form-height);
    position: absolute;
    margin-left: var(--barcode-icon-container-width);
    padding-left: 10px;
    padding-right: 10px;
    color: gray;
    background-color: transparent;
    border: none;
    z-index: 2;
}

.scan-barcode-input {
    flex-grow: 1;
    font-size: 1.25rem;
    border: none;
    padding-right: 5px;
    padding-left: var(--cancel-button-width);
    min-width: 20px;
}

.scan-barcode-input:focus {
    /*
    necessary so that the focus indicator outline is not clipped by the submit
    button
    */
    z-index: 1;
    outline: none;
}

.scan-barcode-submit-button {
    color: rgb(88, 92, 95);
    padding-left: 10px;
    padding-right: 10px;
    background-color: #f8f9fa;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
    border: none;
}

/* style the button when the user clicks on it */
.scan-barcode-submit-button:active:not([disabled]) {
    background-color: #e8e8e8;
}

